<resources>
    <string name="app_name">PutatoeMyWallet</string>
    <string name="putatoe_wallet">Putatoe Wallet</string>
    <string name="_500">500</string>
    <string name="reward_points">Reward Points</string>
    <string name="_1_putatoe_credit_1_rupee">1 putatoe credit = 1 rupee</string>
    <string name="can_be_redeemed_to_your_bank_account_on_amount_above_10_000">Can be redeemed to your bank account on amount above ₹ 10,000</string>
    <string name="_100_reward_points_1_putatoe_limit">100 reward points = 1 putatoe limit</string>
    <string name="_0_0">₹ 0.0</string>
    <string name="transfer_money">Transfer Money</string>
</resources>